@@ -110,7 +110,9 @@ Profile::Load(UISettings &settings)
 
   Get(ProfileKeys::MenuTimeout, settings.menu_timeout);
 
+#ifndef GNAV
   Get(ProfileKeys::UseCustomFonts, settings.custom_fonts);
+#endif
 
   Get(ProfileKeys::EnableTAGauge, settings.enable_thermal_assistant_gauge);
 
