@@ -30,7 +30,9 @@ UISettings::SetDefaults()
 
   menu_timeout = 8 * 4;
 
+#ifndef GNAV
   custom_fonts = false;
+#endif
 
   enable_thermal_assistant_gauge = true;
 
